gix home page link

--- a/404.html
+++ b/404.html
@@ -178,6 +178,6 @@ layout: default
     <img src="{{ site.baseurl }}/images/gudetama-404.png" class="gudetama" alt="gudetama">
     <p><strong>Page not found :(</strong></p>
     <p>The requested page could not be found.</p>
-    <a href="{{ site.baseurl }}" rel="blog home page">-> see all blogs </a>
+    <a href="{{ site.baseurl }}/" rel="blog home page">-> see all blogs </a>
   </section>
 </div>
