see last commit, also add first blog

--- a/404.html
+++ b/404.html
@@ -1,14 +1,15 @@
 ---
-layout: default
+layout: home
+title: 404
 ---
 
 <style type="text/css" media="screen">
   .container {
     margin: 0 auto;
-    padding:auto;
+    padding: auto;
     max-width: 600px;
     text-align: center;
-    height: 100vh;
+    height: 70vh;
     display: flex;
     align-items: center;
     color: #039AE7;
